# MergeDNA

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: eval_genomics.py  eval_protein_fitness.py  main.py  run_eval_genomics_sample.sh  run_eval_protein_fitness_sample.sh  run_train_sample.sh
src/mergedna/: __init__.py  blocks.py  config.py  data.py  losses.py  merge_ops.py  model.py  scoring.py  train.py
src/mergedna/eval/: __init__.py  data.py  models.py  train_eval.py
